--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,150 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
-
 body {
-    font-size: 100%;
-    font-family: "Poppins", sans-serif;
+  font-size: 100%;
+  font-family: "Poppins", sans-serif;
 }
 
 a {
-    color: #0083fd;
+  color: #0083fd;
 }
 
 a:hover {
-    color: rgb(58, 179, 255);
+  color: rgb(58, 179, 255);
 }
 
 a:active {
-    color: blue;
+  color: blue;
 }
 
 #cabeçalho {
-    float: inline-start;
+  float: inline-start;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  border-bottom: 1px solid #0083fd;
+  background-color: white;
+  height: 70px;
+  z-index: 999;
+}
+
+.imagem-cabeçalho {
+  width: 150px;
+}
+
+.cabeçalho-menu {
+  display: flex;
+  gap: 10px 30px;
+  text-decoration: none;
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+nav ul li {
+  display: inline;
+  margin: 10px;
+}
+
+/* Dropdown Button */
+.dropbtn {
+  color: #0083fd;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: #0083fd;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: rgb(58, 179, 255);
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  color: rgb(58, 179, 255);
+}
+
+.cabeçalho-menu-item {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.img-banner {
+  position: relative;
+  top: 70px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.conteudo {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: space-around;
+  justify-content: space-around;
+  padding: 120px;
+}
+
+.rodape-info {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  text-align: center;
+  padding: 20px;
+  position: relative;
+}
+
+@media screen and (max-width: 900px) {
+  .hamburguer {
+  }
+
+  #cabeçalho {
     position: fixed;
     top: 0px;
     left: 0px;
@@ -36,104 +156,27 @@ a:active {
     border-bottom: 1px solid #0083fd;
     background-color: white;
     height: 70px;
-    z-index: 1;
-}
+    z-index: 999;
+  }
 
-.imagem-cabeçalho {
+  .imagem-cabeçalho {
     width: 150px;
-}
+    align-items: center;
+  }
 
-.cabeçalho-menu {
+  .cabeçalho-menu {
     display: flex;
     gap: 10px 30px;
     text-decoration: none;
-}
+  }
 
-nav ul {
-    list-style-type: none;
-}
-
-nav ul li {
-    display: inline;
-    margin: 10px;
-}
-
-/* Dropdown Button */
-.dropbtn {
-    color: #0083fd;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: #0083fd;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-    color: rgb(58, 179, 255);
-}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    color: rgb(58, 179, 255);
-}
-
-.cabeçalho-menu-item {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-}
-
-.img-banner {
+  .img-banner {
     position: relative;
     top: 70px;
+    width: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-}
-
-.conteudo {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    align-content: space-around;
-    justify-content: space-around;
-    padding: 120px;
-}
-
-.rodape-info {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 400;
-    font-size: 12px;
-    text-align: center;
-    padding: 20px;
+  }
 }
