--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ a:active {
   text-decoration: none;
 }
 
+.img-btn:hover {
+  filter: opacity(0.4) drop-shadow(0 0 0 rgb(58, 179, 255));
+}
+
 nav ul {
   list-style-type: none;
 }
@@ -103,6 +107,10 @@ nav ul li {
   color: rgb(58, 179, 255);
 }
 
+.dropdown:hover .img-btn {
+  filter: opacity(0.4) drop-shadow(0 0 0 rgb(58, 179, 255));
+}
+
 .cabeçalho-menu-item {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -141,8 +149,7 @@ nav ul li {
 }
 
 @media screen and (max-width: 900px) {
-  .hamburguer {
-  }
+  .hamburguer {}
 
   #cabeçalho {
     position: fixed;
