--- a/css/cards.css
+++ b/css/cards.css
@@ -1,14 +1,9 @@
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
+  max-width: 250px;
   margin: auto;
   text-align: center;
   font-family: arial;
-}
-
-.price {
-  color: grey;
-  font-size: 22px;
 }
 
 .card button {
@@ -16,7 +11,7 @@
   outline: 0;
   padding: 12px;
   color: white;
-  background-color: #000;
+  background-color: #FFAA4C;
   text-align: center;
   cursor: pointer;
   width: 100%;
@@ -25,4 +20,16 @@
 
 .card button:hover {
   opacity: 0.7;
+}
+
+.preco {
+  color: grey;
+  font-size: 22px;
+  padding: 8px;
+}
+
+.descricao {
+  font-family: Arial Narrow, sans-serif;
+  padding-top: 2px;
+  padding-bottom: 8px;
 }
