--- a/css/cards.css
+++ b/css/cards.css
@@ -1,17 +1,20 @@
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 220px;
-  margin: auto;
+  margin: 15px;
   text-align: center;
   font-family: arial;
 }
 
 .card h1 {
-  font-size: 20px;
+  max-height: 28px;
+  font-size: 15px;
 }
 
 .card button {
   border: none;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
   outline: 0;
   padding: 12px;
   color: white;
@@ -23,7 +26,7 @@
 }
 
 .card button:hover {
-  opacity: 0.7;
+  background-color: #c66b02;
 }
 
 .preco {
