--- a/css/index.css
+++ b/css/index.css
@@ -80,7 +80,7 @@ body {
   left: 0;
   top: 0;
   opacity: 0;
-  transition: opacity 1s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .imageBox:hover .hover-img {
@@ -88,7 +88,6 @@ body {
 }
 
 .imageBox:hover .top-img {
-  transition: opacity 1s ease-in-out;
   opacity: 0;
 }
 
@@ -102,7 +101,7 @@ body {
 }
 
 .menu-expansivo:target {
-  height: 578px;
+  height: 1400px;
 }
 
 /* código dos cards */
@@ -171,6 +170,9 @@ button.primary.ghost {
   text-align: left;
   padding: 15px;
   margin-top: 30px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+
 }
 
 .skills ul {
@@ -188,6 +190,37 @@ button.primary.ghost {
   padding: 7px;
 }
 
+#maps {
+  background-color: #000;
+  margin: 50px 430px;
+  border-radius: 12px;
+  position: relative;
+  display: inline-block;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: space-around;
+  justify-content: space-around;
+  padding: 40px;
+}
+
+#detalhes {
+  position: relative;
+  display: inline-block;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+#descricao {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: space-around;
+  justify-content: space-around;
+  padding: 20px;
+}
 
 .rodape-info {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
