--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,7 @@ body {
   font-family: 'Star Jedi', arial;
   font-size: 30px;
   text-shadow: 4px 4px 4px #0083fd;
-  letter-spacing: 2px;
+  letter-spacing: 2.4px;
 }
 
 #hide-container {
@@ -80,7 +80,7 @@ body {
   left: 0;
   top: 0;
   opacity: 0;
-  transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.7s ease-in-out;
 }
 
 .imageBox:hover .hover-img {
@@ -96,12 +96,12 @@ body {
   overflow: hidden;
   color: #000;
   line-height: auto;
-  transition: all .5s ease-in-out;
+  transition: all 1s ease-in-out;
   height: 0;
 }
 
 .menu-expansivo:target {
-  height: 1400px;
+  height: 1200px;
 }
 
 /* código dos cards */
@@ -192,10 +192,11 @@ button.primary.ghost {
 
 #maps {
   background-color: #000;
-  margin: 50px 430px;
+  box-shadow: 0px 10px 20px -10px rgba(24, 24, 24, 0.75);
+  margin: 50px;
+  margin-top: 0;
   border-radius: 12px;
-  position: relative;
-  display: inline-block;
+  float: right;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
@@ -206,35 +207,38 @@ button.primary.ghost {
 
 #detalhes {
   position: relative;
-  display: inline-block;
+  float: left;
   flex-direction: row;
   flex-wrap: wrap;
+  text-align: justify;
+  padding: 120px;
 }
 
 #descricao {
-  position: relative;
-  display: flex;
+  border: #fff solid;
+  background-color: #141124;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
   align-content: space-around;
   justify-content: space-around;
-  padding: 20px;
+  margin-top: 150px;
+  padding: 5px 150px;
 }
 
 .rodape-info {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 400;
   font-size: 12px;
   text-align: center;
-  padding: 10px 20px 20px 20px;
+  padding: 0px 20px 20px 20px;
   position: relative;
   color: white;
 }
 
 footer {
-  position: relative;
+  background-color: #000;
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
