--- a/css/index.css
+++ b/css/index.css
@@ -101,7 +101,7 @@ body {
 }
 
 .menu-expansivo:target {
-  height: 1200px;
+  height: 1250px;
 }
 
 /* código dos cards */
@@ -194,7 +194,8 @@ button.primary.ghost {
   background-color: #000;
   box-shadow: 0px 10px 20px -10px rgba(24, 24, 24, 0.75);
   margin: 50px;
-  margin-top: 0;
+  margin-right: 215px;
+  margin-top: 50px;
   border-radius: 12px;
   float: right;
   flex-direction: row;
