--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,10 @@ nav ul li {
     justify-content: space-around;
 }
 
+.img-banner img {
+    width: 70%;
+}
+
 .conteudo {
     position: relative;
     display: flex;
@@ -143,73 +147,4 @@ nav ul li {
     position: relative;
 }
 
-@media screen and (max-width: 900px) {
-    #cabeçalho {
-        float: right;
-        position: relative;
-        top: -5px;
-        cursor: pointer;
-        position: relative;
-        display: block;
-        height: 22px;
-        width: 30px;
-        margin: 30px 30px;
-        display: none;
-    }
-
-    #cabeçalho span {
-        position: absolute;
-        display: block;
-        height: 5px;
-        width: 100%;
-        border-radius: 30px;
-        background: black;
-        transition: 0.25s ease-in-out;
-    }
-
-    #cabeçalho a:nth-child(1) {
-        top: 0;
-    }
-
-    #cabeçalho a:nth-child(2) {
-        top: 8px;
-    }
-
-    #cabeçalho a:nth-child(3) {
-        top: 16px;
-    }
-
-    #checkbox:checked+#cabeçalho a:nth-child(1) {
-        transform: rotate(-45deg);
-        top: 8px;
-    }
-
-    #checkbox:checked+#cabeçalho a:nth-child(2) {
-        opacity: 0;
-    }
-
-    #checkbox:checked+#cabeçalho a:nth-child(3) {
-        transform: rotate(+45deg);
-        top: 8px;
-    }
-
-    #checkbox {
-        float: right;
-        display: block;
-    }
-
-    .imagem-cabeçalho {
-        width: 150px;
-        align-items: center;
-    }
-
-    .img-banner {
-        position: relative;
-        top: 70px;
-        width: auto;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-    }
-}
+@media screen and (max-width: 900px) {}
