--- a/css/styleForm.css
+++ b/css/styleForm.css
@@ -1,66 +1,78 @@
-.bg-img {
-  /* The image used */
-  background-image: url("../imagens/forms.jpg");
+#bg-img {
+	background-image: url("../imagens/forms.jpg");
 
-  /* Control the height of the image */
-  min-height: 890px;
+	min-height: 890px;
 
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  top: 70px;
-  bottom: 0px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	top: 70px;
+	bottom: 0px;
 }
 
-/* Add styles to the form container */
 #conteudo-form {
-  position: absolute;
-  top: 10px;
-  right: 200px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  margin: 20px;
-  max-width: 550px;
-  border-radius: 10px;
-  padding: 16px;
-  background-color: white;
+	position: absolute;
+	top: 10px;
+	right: 200px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-around;
+	margin: 20px;
+	max-width: 550px;
+	border-radius: 10px;
+	padding: 16px;
+	background-color: white;
 }
 
-/* Full-width input fields */
-textarea,
+.form-inline {
+	display: flex;
+	align-items: center;
+	align-content: space-around;
+	justify-content: space-around;
+}
+
+.form-inline label {
+	margin: 8px;
+}
+
+.form-inline textarea,
 select,
 input:not(#btn-enviar) {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: 1px solid lightgray;
-  border-radius: 5px;
-  background: #f1f1f1;
-  transition: width 0.4s ease-in-out;
+	display: flex;
+	width: 100%;
+	padding: 15px;
+	margin: 5px;
+	border: none;
+	border-radius: 8px;
+	background: #f1f1f1;
+	transition: width 0.4s ease-in-out;
 }
 
 input:focus {
-  background: #ddd;
-  outline: none;
+	background: #ddd;
+	outline: none;
 }
 
-/* Set a style for the submit button */
 .btn {
-  background-color: #0083fd;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
+	background-color: #0083fd;
+	color: white;
+	margin: 5px;
+	padding: 16px 20px;
+	border: none;
+	cursor: pointer;
+	width: 100%;
+	opacity: 0.9;
 }
 
 .btn:hover {
-  opacity: 1;
+	opacity: 1;
 }
 
-/* Teste */
+
+
+
+.rodape-info {
+	color: white;
+}
