--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,18 @@ nav ul li {
     padding: 120px 200px 0px 200px;
 }
 
+.produto{
+    display: grid;
+    flex-direction: row;
+}
+
+.produtos img{
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 .rodape-info {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
         Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
