--- a/css/style.css
+++ b/css/style.css
@@ -137,25 +137,25 @@ nav ul li {
     padding: 120px 200px 0px 200px;
 }
 
-.slider{
+.slider {
     width: 800px;
     height: 500px;
     overflow: hidden;
     position: absolute;
 }
 
-.slides{
+.slides {
     display: flex;
 }
 
-.navigation-bar{
+.navigation-bar {
     position: absolute;
     bottom: 20px;
     left: 50%;
     transform: translate(-50%);
 }
 
-input{
+input {
     display: none;
 }
 
@@ -173,10 +173,25 @@ input{
     .conteudo {
         padding: 120px 50px 0px 50px;
     }
-
 }
 
 @media screen and (max-width: 600px) {
+    #cabeçalho {
+        width: 100%;
+        height: 110px;
+        flex-wrap: wrap;
+    }
+
+    .imagem-cabeçalho {
+        width: 150px;
+        padding: 10px;
+    }
+
+    .cabeçalho-menu ul a {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
     .conteudo {
         padding: 120px 15px 0px 15px;
     }
