--- a/css/styleForm.css
+++ b/css/styleForm.css
@@ -50,6 +50,20 @@ input:not(#btn-enviar) {
 	transition: width 0.4s ease-in-out;
 }
 
+textarea {
+	display: flex;
+	width: 100%;
+	height: 250px;
+	padding: 15px;
+	margin: 5px;
+	border: none;
+	border-radius: 8px;
+	background: #f1f1f1;
+	transition: width 0.4s ease-in-out;
+	box-sizing: border-box;
+	resize: none;
+}
+
 input:focus {
 	background: #ddd;
 	outline: none;
@@ -70,9 +84,44 @@ input:focus {
 	opacity: 1;
 }
 
-
-
-
 .rodape-info {
 	color: white;
+}
+
+@media screen and (max-width: 900px) {
+	#bg-img {
+		min-height: 1110px;
+	}
+
+	#conteudo-form {
+		margin: 20px;
+		max-width: 400px;
+		padding: 5px 15px 5px 15px;
+	}
+
+	.form-inline {
+		flex-direction: column;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	#bg-img {
+		min-height: 781px;
+	}
+
+	#conteudo-form {
+		left: 10px;
+		right: 10px;
+		margin: 25px;
+		max-width: 400px;
+		padding: 5px 15px 5px 15px;
+	}
+
+	.form-inline {
+		flex-direction: column;
+	}
+
+	.rodape-info {
+		padding: 0px 10px 0px 10px;
+	}
 }
